# EMIC_multi-satellites_study

./: .gitignore  .nojekyll  README.md  _quarto.yml  environment.yml  index.html  index.qmd  justfile  pyproject.toml  robots.txt  search.json  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yaml  test.yaml
conf/: catalog.yml
data/03_primary/: D_EMIC_elfin.csv  D_EMIC_est.csv  D_EMIC_est_high.csv
files/: article.md  communication.md  communication.txt
manuscripts/: .AGU23_poster.rmd  AGU23_poster-preview.html  AGU23_poster.embed.ipynb  AGU23_poster.out.ipynb  AGU23_poster.qmd
nbs/: .06_poes.ipynb  00_overview-preview.html  00_overview.ipynb  00_overview.out.ipynb  01_elfin-preview.html  01_elfin.ipynb  01_elfin.out.ipynb  02_erg-preview.html  02_erg.ipynb  02_erg.out.ipynb  03_mms-preview.html  03_mms.ipynb  03_mms.out.ipynb  05_goes-preview.html  05_goes.ipynb  05_goes.out.ipynb  06_poes.ipynb  100_plot.ipynb  10_orbits-preview.html  10_orbits.ipynb  10_orbits.out.ipynb  20_diffusion_coefficient-preview.html  20_diffusion_coefficient.ipynb  20_diffusion_coefficient.out.ipynb  20_main.nb  index-preview.html  index.ipynb  index.out.ipynb  utilities.wl
src/: elf_j.pro  elf_test.pro  publication.mplstyle  trial.py  utilities.py
src/elfin_emics/: __init__.py  poes.py
