[project]
name = "elfin_emics"
version = "0.1.0"
authors = [{ name = "Beforerr", email = "zzj956959688@gmail.com" }]
requires-python = ">= 3.10"
dependencies = [
    "xarray",
    "pyspedas",
    "beforerr",
    "polars",
    "scienceplots"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["pyviz", "conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
jupyter = "*"
plasmapy = "*"
scipy = "*"
sscws = "*"
netcdf4 = "*"
altair = "*"
seaborn = "*"
hvplot = "*"
panel = "*"
unyt = "*"

[tool.pixi.pypi-dependencies]
elfin_emics = { path = ".", editable = true }
proplot = { git = "https://github.com/cvanelteren/proplot.git", tag = "v0.9.91" }
spacepy = "*"
pdpipe = "*"
